--- a/package.json
+++ b/package.json
@@ -17,9 +17,10 @@
     "test": "react-scripts test --watchAll=false",
     "test:watch": "react-scripts test",
     "eject": "react-scripts eject",
-    "prepare": "husky install",
+    "prepare": "husky",
     "cypress:open": "cypress open",
-    "cypress:run": "cypress run"
+    "cypress:run": "cypress run",
+    "lint": "eslint \"{src,apps,libs,test}/**/*.js\" --fix"
   },
   "eslintConfig": {
     "extends": [
