--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --watchAll=false",
+    "test:unit": "react-scripts test --testPathPattern='^(?!.*\\.functional\\.test\\.jsx$).*\\.test\\.jsx$' --watchAll=false",
+    "test:functional": "react-scripts test --testPathPattern='\\.functional\\.test\\.jsx$' --watchAll=false",
     "test:watch": "react-scripts test",
     "eject": "react-scripts eject",
     "prepare": "husky",
@@ -41,7 +43,7 @@
     ]
   },
   "devDependencies": {
-    "cypress": "^13.6.1",
+    "cypress": "^13.17.0",
     "husky": "^8.0.3",
     "lint-staged": "^15.2.0"
   },
